--- a/stc.css
+++ b/stc.css
@@ -2,7 +2,7 @@ body {
   background: #fff url(img/bg.png) 0 0 fixed; /*#DEDFDE;*/
   color: #000;
   margin: 0 auto;
-  font-family: roboto, helvetica, sans-serif;
+  font-family: RobotoRegular, helvetica, sans-serif;
   font-size: 16px;
 }
 
@@ -36,7 +36,7 @@ h1 {
   color: #00b;
   text-transform: uppercase;
   text-align: center;
-  font-family: 'oswald stencil', roboto, helvetica, sans-serif;
+  font-family: OswaldStencilRegular, RobotoRegular, helvetica, sans-serif;
   border-bottom: 3px double #c5d6ee;
   margin: 0;
   padding: 20px 0;
@@ -133,7 +133,7 @@ footer h1 {
   vertical-align: middle;
   line-height: 140px;
   position: relative;
-  top: -140px;
+  top: -120px;
   margin: 0;
 }
 
