--- a/stc.css
+++ b/stc.css
@@ -137,4 +137,24 @@ footer h1 {
   margin: 0;
 }
 
-.gist {font-size: 0.7em;}
+.gist { font-size: 0.7em; }
+
+::-webkit-scrollbar {
+  width: 12px;
+  background: #eaefe8;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: #c0c0c0;
+  border: 0 solid #eaefe8;
+  border-width: 4px;
+}
+
+::-webkit-scrollbar-thumb:vertical:hover {
+  border-width: 4px 2px;
+}
+
+::-webkit-scrollbar-thumb:vertical:active {
+  background: #585858;
+  -webkit-box-shadow: 0 1px 2px #000 inset;
+}
